Fix dark mode backgrounds

--- a/src/index.css
+++ b/src/index.css
@@ -82,7 +82,7 @@
     --secondary-foreground: 0 0% 100%;
 
     --muted: 240 7% 32%;
-    --muted-foreground: 0 0% 85%;
+    --muted-foreground: 0 0% 100%;
 
     --accent: 240 7% 32%;
     --accent-foreground: 0 0% 100%;
